modified .env file

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 SERVER_PORT=8080
-DATABASE_URL=mongodb://localhost:27017
-
+DB_HOST=localhost
+DB_PORT=27017
+DB_NAME=go-mongodb
+DB=mongodb
+USER_DB=
+PASS_DB=
